@startuml

MenuGroupRepository <-- MenuGroupService

MenuRepository <-- MenuService
MenuValidator <-- MenuService

ProductRepository <-- ProductService


class MenuGroupService {
    - MenuGroupRepository menuGroupRepository

    + create(request)
    + list()
}

class MenuService {
    - MenuRepository menuRepository
    - MenuValidator menuValidator

    + create(request)
    + list()
}

class ProductService {
    - ProductRepository productRepository

    + create(request)
    + list()
}


interface MenuGroupRepository {
}

interface MenuRepository {
}

interface ProductRepository {
}

@enduml

@startuml
OrderRepository <-- OrderService
OrderValidator <-- OrderService

TableRepository <-- TableGroupService
TableGroupRepository <-- TableGroupService
ApplicationEventPublisher <-- TableGroupService
TableGroupValidator <-- TableGroupService

TableRepository <-- TableService
TableValidator <-- TableService

class OrderService {
    - OrderRepository orderRepository
    - OrderValidator orderValidator

    + create(request)
    + list()
    + changeOrderStatus(orderId, request)
}

class TableGroupService {
    - TableRepository tableRepository
    - TableGroupRepository tableGroupRepository
    - TableGroupValidator tableGroupValidator
    - ApplicationEventPublisher eventPublisher

    + create(request)
    + ungroup(tableGroupId)
}

class TableService {
    - TableRepository tableRepository
    - TableValidator tableValidator;

    + create(request)
    + list()
    + changeEmpty(tableId)
    + changeNumberOfGuests(tableId, request)
}

interface OrderRepository {
}

interface TableRepository {
    + findByTableGroupId(tableGroupId))
}

interface TableGroupRepository {
}
@enduml
